--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,107 @@ html, body, #root {
 .font-yeseva {
   font-family: "YesevaOne";
 }
+
+.markdown-wrapper h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+}
+
+.markdown-wrapper h2 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.markdown-wrapper h3 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.markdown-wrapper h4 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.markdown-wrapper h5 {
+  font-size: 1.1rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+@media (width < 48rem) {
+  .markdown-wrapper h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  .markdown-wrapper h2 {
+    font-size: 1.8rem;
+  }
+
+  .markdown-wrapper h3 {
+    font-size: 1.5rem;
+  }
+
+  .markdown-wrapper h4 {
+    font-size: 1.3rem;
+  }
+
+  .markdown-wrapper h5 {
+    font-size: 1rem;
+  }
+}
+
+.markdown-wrapper p {
+  margin-bottom: 1rem;
+}
+
+.markdown-wrapper a {
+  color: #bd7224;
+}
+
+.markdown-wrapper a:after {
+  content: '↗';
+  padding-left: 8px;
+}
+
+.markdown-wrapper ul, .markdown-wrapper ol {
+  margin-bottom: 1rem;
+  padding-left: 2rem;
+}
+
+.markdown-wrapper ul li {
+  list-style:disc;
+}
+
+.markdown-wrapper ol li {
+  list-style: decimal;
+}
+
+.page-transition {
+  position: absolute;
+  left: 15px;
+  right: 15px;
+}
+
+.page-transition-enter {
+  opacity: 0;
+  transform: scale(1.1);
+}
+
+.page-transition-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 50ms, transform 50ms;
+}
+
+.page-transition-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.page-transition-exit-active {
+  opacity: 0;
+  transform: scale(0.9);
+  transition: opacity 50ms, transform 50ms;
+}
