fix(download-script): partial file download + existance checks + cleanup

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,11 @@ html, body, #root {
   src: url(../fonts/YesevaOne-Regular.ttf);
 }
 
+@font-face {
+  font-family: KaushanScripts;
+  src: url(../fonts/Kaushan-Script-Regular.ttf);
+}
+
 .font-archivo {
   font-family: "Archivo", cursive;
 }
@@ -37,6 +42,14 @@ html, body, #root {
 .font-yeseva {
   font-family: "YesevaOne";
 }
+
+/* .markdown-wrapper h1,
+.markdown-wrapper h2,
+.markdown-wrapper h3,
+.markdown-wrapper h4,
+.markdown-wrapper h5 {
+  font-family: "KaushanScripts"
+} */
 
 .markdown-wrapper h1 {
   font-size: 4rem;
